# git-extra

./: .gitignore  Dockerfile  Makefile.am  README.md  configure.ac  todo
include/: add.h  branch.h  cat.h  commit.h  default.h  edit.h  editor.h  exec.h  git.h  hash.h  log.h  ls.h  main.h  opt.h  prepend.h  templ.h
src/: add.c  branch.c  cat.c  commit.c  default.c  edit.c  editor.c  exec.c  git.c  hash.c  log.c  ls.c  main.c  prepend.c  templ.c
templates/: bug.template
test/integration/: Makefile.am  package-lock.json  package.json
test/integration/test/: add.integration.tests.js  branch.pattern.integration.test.js  cat.integration.tests.js  edit.integration.tests.js  ls.integration.tests.js  utils.js
test/unit/: Makefile.am  add.tests.c  add.tests.h  branch.tests.c  branch.tests.h  cat.tests.c  cat.tests.h  commit.tests.c  commit.tests.h  default.tests.c  default.tests.h  edit.tests.c  edit.tests.h  editor.tests.c  editor.tests.h  hash.tests.c  hash.tests.h  templ.tests.c  templ.tests.h  test_utils.c  test_utils.h
